--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/cv">CV</a></li>
-	        		<li><a href="/blog">Blog</a></li>
+	        		<li><a href="/resume">Resume</a></li>
+	        		<li><a href="/currentProjects">Current Projects</a></li>
 	    		</ul>
 			</nav>
 			<div class="container">
@@ -21,8 +21,8 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+	        		<li><a href="">email (not currently listed)</a></li>
+	        		<li><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
 				</ul>
 			</footer>
 		</body>
