Added simpple text changes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
-	<html>
-		<head>
-			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
-		</head>
-		<body>
-			<nav>
-	    		<ul>
-	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/about">About</a></li>
-	        		<li><a href="/resume">Resume</a></li>
-	        		<li><a href="/currentProjects">Current Projects</a></li>
-	    		</ul>
-			</nav>
-			<div class="container">
-			
-			{{ content }}
-			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="">email (not currently listed)</a></li>
-	        		<li><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
-				</ul>
-			</footer>
-		</body>
-	</html>
+<html>
+
+<head>
+    <title>{{ page.title }}</title>
+    <!-- link to main stylesheet -->
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+</head>
+
+<body>
+    <nav>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about">About</a></li>
+            <li><a href="/resume">Resume</a></li>
+            <li><a href="/currentProjects">Current Projects</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+
+        {{ content }}
+
+    </div>
+    <!-- /.container -->
+    <footer>
+        <ul>
+            <li><a href="">email (not currently listed)</a></li>
+            <li><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
+        </ul>
+    </footer>
+</body>
+
+</html>
