Making footer include

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,12 +22,7 @@
 
     </div>
     <!-- /.container -->
-    <footer>
-        <ul>
-            <li><a href="">email (not currently listed)</a></li>
-            <li><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
-        </ul>
-    </footer>
+    {% include footer.html %}
 </body>
 
 </html>
