Making footer include

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<div class="footer">
+<footer>
     <ul>
             <li><a href="">email (not currently listed)</a></li>
             <li><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
     </ul>
     
 	<p class="pull-right"><small><a href="/site" title="About this site">About this site</a></small></p>
-</div> <!-- /footer -->
+</footer>
