Making the footer work

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,10 @@ footer {
     font-size: .8em;
 }
 
+footer {
+    display: inline
+}
+
 ul.posts {
     margin: 20px auto 40px;
     font-size: 1.5em;
