Working on bootstrap functionality

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,12 @@
 <html>
 
 <head>
-    <title>{{ page.title }}</title>
+    <meta charset="UTF-8" />
+    <!-- link to bootstrap -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
     <!-- link to main stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <title>{{ page.title }}</title>
 </head>
 
 <body>
