--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8" />
-    <!-- link to bootstrap -->
+    <!-- link to bootstrap 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/>
+    -->
     <!-- link to main stylesheet -->
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <title>{{ page.title }}</title>
