Rolled back to stop Jekyll so I can do client side work

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,17 @@
 
     </div>
     <!-- /.container -->
-    {% include footer.html %}
+    <footer class="container">
+        <div class="row">
+            <ul class="col-sm-8">
+                <li class="col-sm-4"><a href="">email (not currently listed)</a></li>
+                <li class="col-sm-4"><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
+            </ul>
+
+            <p class="col-sm-4 pull-right"><small><a href="/site" title="About this site">About this site</a></small></p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
