--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,10 @@ footer ul li {
     margin-right: 20px;
 }
 
+footer ul li {
+    text-align: left;
+}
+
 a {
     text-decoration: none;
     color: #999;
