--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <footer class="container">
-    <div class="row">
+    <nav class="row">
         <ul class="col-sm-8">
             <li class="col-sm-4"><a href="">Email (not currently listed)</a></li>
             <li class="col-sm-4"><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
         </ul>
         <!-- /.col-sm-8 -->
         <p class="pull-right"><a href="/site" title="About this site">About this site</a></p>
-    </div>
+    </nav>
     <!-- /.row -->
 </footer>
 <!-- /.container -->
