--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <footer class="container">
     <nav class="row">
-        <ul class="col-sm-8">
+        <ul class="col-sm-12">
             <li class="col-sm-4"><a href="">Email (not currently listed)</a></li>
             <li class="col-sm-4"><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
+            <li class="col-sm-4 pull-right"><a href="/site" title="About this site">About this site</a></li>
         </ul>
-        <!-- /.col-sm-8 -->
-        <p class="pull-right"><a href="/site" title="About this site">About this site</a></p>
+        <!-- col-sm-12 -->
     </nav>
     <!-- /.row -->
 </footer>
