--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="container">
     <nav class="row">
         <ul class="col-sm-12">
-            <li class="col-sm-3"><a href="">Email (not currently listed)</a></li>
+            <li class="col-sm-1"><a href="">Email</a></li>
             <li class="col-sm-2"><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
             <li class="pull-right"><a href="/site" title="About this site">About this site</a></li>
         </ul>
