--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <li class="col-sm-1"><a href="/">Home</a></li>
             <li class="col-sm-1"><a href="/about">About</a></li>
             <li class="col-sm-1"><a href="/resume">Resume</a></li>
-            <li class="col-sm-3"><a href="/currentProjects">Current Projects</a></li>
+            <li class="col-sm-3"><a href="/projects">Projects</a></li>
         </ul>
         <!-- /.col-sm-8 -->
     </nav>
