--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,10 @@
-
 body {
     margin-top: 60px;
 }
 
 nav ul,
 footer ul {
-    font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+    font-family: "Helvetica", "Arial", "Sans-Serif";
     list-style: none;
     font-weight: bold;
 }
@@ -31,7 +30,7 @@ a:hover {
 
 h1 {
     font-size: 3em;
-    font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+    font-family: "Helvetica", "Arial", "Sans-Serif";
 }
 
 p {
